--- a/app/src/main/res/values-es/string.xml
+++ b/app/src/main/res/values-es/string.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="Transaction_new">Nueva Transacción</string>
-    <string name="Transaction_filter"> Filtro de Transacciones </string>
+    <string name="Transaction_filter"> Filtro Transacciones </string>
     <string name="app_name"> elContador </string>
     <string name="new_transaction_title">Nueva Transacción</string>
     <string name="receive">Recibe</string>
@@ -16,11 +16,11 @@
     <string name="tenants">Arrendatorios</string>
     <string name="employees">Empleados</string>
     <string name="shops_storage">Stores Storage</string>
-    <string name="home">Home</string>
+    <string name="home">Inicio</string>
     <string name="transactions">Transactions</string>
     <string name="homepage_title">%1$s, %2$s!</string>
-    <string name="settings">Settings</string>
-    <string name="filter_transactions">Filter Transactions</string>
+    <string name="settings">Ajustes</string>
+    <string name="filter_transactions">Filtro Transacciones</string>
     <string-array name="category_items">
         <item>Others</item>
         <item>Rent</item>
@@ -60,48 +60,48 @@
         <item>Cash from company</item>
         <item>Cash for company</item>
     </string-array>
-    <string name="log_out">Log out</string>
+    <string name="log_out"> Cerrar Sesión</string>
     <string name="new_transaction">Nueva Transacción</string>
-    <string name="edit">Edit</string>
-    <string name="close">Close</string>
-    <string name="confirm">Confirm</string>
-    <string name="filter">Filter</string>
+    <string name="edit">Editar</string>
+    <string name="close">Cerrar</string>
+    <string name="confirm">Confirmar</string>
+    <string name="filter">Filtrar</string>
     <string name="dd_mm_yyyy">DD/MM/YYYY</string>
-    <string name="pay_to">Pay to</string>
-    <string name="stakeholder">Stakeholders</string>
-    <string name="additional_comments">Additional Comments</string>
-    <string name="select_a_category">Select a category</string>
-    <string name="select_a_sub_category">Select a sub-Category</string>
-    <string name="register_log_in">Register New Log In</string>
-    <string name="change_password">Change Password</string>
-    <string name="budget">Budget: $%1$.2f</string>
+    <string name="pay_to">Pagar a</string>
+    <string name="stakeholder"> Participantes </string>
+    <string name="additional_comments">Comentarios adicionales</string>
+    <string name="select_a_category">Elige una categoria</string>
+    <string name="select_a_sub_category">Elige una sub-categoria</string>
+    <string name="register_log_in">Registrar un nuevo usuario</string>
+    <string name="change_password">Cambiar contraseña</string>
+    <string name="budget">Presuesto: $%1$.2f</string>
     <string name="subtotal">Subtotal: $%1$.2f</string>
-    <string name="zero_amount">Please, fill in the desired amount.</string>
-    <string name="choose_picture">Choose Picture</string>
-    <string name="delete">Delete</string>
-    <string name="change_pic">Change Picture</string>
-    <string name="all_stakeholders">All Stakeholders</string>
-    <string name="select_stakeholder">Select StakeHolder</string>
-    <string name="username">Username</string>
-    <string name="password">Password</string>
-    <string name="log_in">Log In</string>
+    <string name="zero_amount">Por favor, ingresa una cantidad.</string>
+    <string name="choose_picture">Elige una foto</string>
+    <string name="delete">Borrar</string>
+    <string name="change_pic">Cambiar foto</string>
+    <string name="all_stakeholders">Todo</string>
+    <string name="select_stakeholder">Elige un participante</string>
+    <string name="username">Usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="log_in">Ingresar</string>
     <string name="textview">TextView</string>
-    <string name="role">Role:</string>
-    <string name="phone_number">Phone Number:</string>
+    <string name="role">Rol:</string>
+    <string name="phone_number">Numero telefónico:</string>
     <string name="email">Email:</string>
-    <string name="name">Name:</string>
-    <string name="first_name">First Name</string>
-    <string name="last_name">Last Name</string>
+    <string name="name">Nombre:</string>
+    <string name="first_name">Nombre</string>
+    <string name="last_name">Apellido</string>
     <string name="roles">Roles</string>
-    <string name="made_by">Made by:</string>
-    <string name="concerning">Concerning:</string>
-    <string name="category">Category:</string>
-    <string name="subcategory">Subcategory:</string>
-    <string name="date_and_time">Date and Time:</string>
-    <string name="notes">Notes:</string>
-    <string name="to_date">To</string>
-    <string name="From_date">From</string>
-    <string name="clear">Clear</string>
+    <string name="made_by">Realizado por:</string>
+    <string name="concerning">Tercero:</string>
+    <string name="category">Categoria:</string>
+    <string name="subcategory">Sub categoria:</string>
+    <string name="date_and_time">Fecha y hora:</string>
+    <string name="notes">Notas:</string>
+    <string name="to_date">Del</string>
+    <string name="From_date">Al</string>
+    <string name="clear">Borrar</string>
     <string name="from_display">\" from \"</string>
     <string name="for_display">\" for \"</string>
     <string name="few_moments_ago">Few moments ago</string>
