--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,20 +18,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imgViewMainLogo"
-            android:layout_width="90dp"
-            android:layout_height="50dp"
-            android:contentDescription="@string/settings"
-            app:srcCompat="@drawable/logo_foreground"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="16dp" />
-
         <TextView
             android:id="@+id/lblToolbarHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/home"
+            android:text="@string/log_in"
             android:textColor="@color/white"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -43,6 +34,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_menu_main"
         android:layout_width="0dp"
+        android:visibility="invisible"
         android:layout_height="75dp"
         android:background="@color/contador_red"
         app:labelVisibilityMode="selected"
