--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/HomeRecycler"
+            android:id="@+id/recyclerAccounts"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
