--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.transactions.AllTransactions">
+    tools:context=".fragments.transactions.AllTransactions"
+    android:padding="15dp">
 
 
     <androidx.recyclerview.widget.RecyclerView
