--- a/app/src/main/res/layout/rec_view_item_all_transactions.xml
+++ b/app/src/main/res/layout/rec_view_item_all_transactions.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recVew_Item_AllTransactions"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="70dp"
+    android:layout_marginTop="10dp"
+    android:background="@color/rec_view_gray">
 
     <TextView
         android:id="@+id/textMicroAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Transacción"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -20,8 +23,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/amount"
-        app:layout_constraintBottom_toBottomOf="@+id/textMicroAccount"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textMicroAccount"
-        app:layout_constraintTop_toTopOf="@+id/textMicroAccount" />
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline5"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="288dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
