Search for stakeHolders ready!!!

--- a/app/src/main/res/layout/fragment_choose_stake_holder.xml
+++ b/app/src/main/res/layout/fragment_choose_stake_holder.xml
@@ -8,6 +8,14 @@
     tools:context=".fragments.transactions.ChooseStakeHolder"
     android:padding="15dp">
 
+    <SearchView
+        android:id="@+id/searchChosenStake"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewChooseStake"
@@ -16,7 +24,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/searchChosenStake" />
 
 
 
