--- a/app/src/main/res/layout/fragment_transaction_new.xml
+++ b/app/src/main/res/layout/fragment_transaction_new.xml
@@ -76,8 +76,10 @@
     <TextView
         android:id="@+id/text_stakeholderSelected"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
+        android:gravity="center"
         android:layout_marginTop="5dp"
+        android:background="@color/rec_view_gray"
         android:text="@string/select_an_stakeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/select_a_category"
 
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="start"
@@ -108,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/select_a_sub_category"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="start"
                 app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +131,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
                 android:hint="@string/additional_comments"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sp_TransSubcategory"
