--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,41 +17,14 @@
             android:id="@+id/action_home_summary_to_settings"
             app:destination="@id/settings" />
         <action
-            android:id="@+id/action_home_summary_to_transactions_summary"
-            app:destination="@id/transactions_summary" />
-        <action
             android:id="@+id/action_home_summary_to_allTransactions"
             app:destination="@id/allTransactions" />
-    </fragment>
-    <fragment
-        android:id="@+id/transactions_summary"
-        android:name="be.kuleuven.elcontador10.fragments.transactions.TransactionsSummary"
-        android:label="fragment_transactions"
-        tools:layout="@layout/fragment_transactions" >
-        <action
-            android:id="@+id/action_transactions_summary_to_transactionsFilter"
-            app:destination="@id/transactionsFilter" />
-        <action
-            android:id="@+id/action_transactions_summary_to_transactionDisplay"
-            app:destination="@id/transactionDisplay" />
-        <action
-            android:id="@+id/action_transactions_summary_to_newTransaction"
-            app:destination="@id/newTransaction" />
-        <argument
-            android:name="parcelFilter"
-            app:argType="be.kuleuven.elcontador10.background.parcels.FilterTransactionsParcel"
-            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/transactionsFilter"
         android:name="be.kuleuven.elcontador10.fragments.transactions.TransactionsFilter"
         android:label="fragment_transactions_filter"
-        tools:layout="@layout/fragment_transactions_filter" >
-        <action
-            android:id="@+id/action_transactionsFilter_to_transactions_summary"
-            app:destination="@id/transactions_summary" >
-        </action>
-    </fragment>
+        tools:layout="@layout/fragment_transactions_filter" />
     <fragment
         android:id="@+id/transactionDisplay"
         android:name="be.kuleuven.elcontador10.fragments.transactions.TransactionDisplay"
@@ -60,19 +33,12 @@
         <argument
             android:name="id"
             app:argType="string" />
-        <action
-            android:id="@+id/action_transactionDisplay_to_transactions_summary"
-            app:destination="@id/transactions_summary" />
     </fragment>
     <fragment
         android:id="@+id/newTransaction"
         android:name="be.kuleuven.elcontador10.fragments.transactions.TransactionNew"
         android:label="fragment_new_transaction"
         tools:layout="@layout/fragment_transaction_new" >
-        <action
-            android:id="@+id/action_newTransaction_to_transactions_summary"
-            app:destination="@id/transactions_summary" >
-        </action>
         <action
             android:id="@+id/action_newTransaction_to_chooseStakeHolderDialog"
             app:destination="@id/chooseStakeHolderDialog" />
@@ -165,5 +131,14 @@
         android:id="@+id/allTransactions"
         android:name="be.kuleuven.elcontador10.fragments.transactions.AllTransactions"
         android:label="fragment_all_transactions"
-        tools:layout="@layout/fragment_all_transactions" />
+        tools:layout="@layout/fragment_all_transactions" >
+        <action
+            android:id="@+id/action_allTransactions_to_newTransaction"
+            app:destination="@id/newTransaction" />
+    </fragment>
+    <fragment
+        android:id="@+id/allMicroAccounts"
+        android:name="be.kuleuven.elcontador10.fragments.stakeholders.AllMicroAccounts"
+        android:label="fragment_all_micro_acounts"
+        tools:layout="@layout/fragment_all_micro_acounts" />
 </navigation>
