--- a/app/src/main/res/layout/fragment_all_micro_acounts.xml
+++ b/app/src/main/res/layout/fragment_all_micro_acounts.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:queryHint="Search"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
