--- a/app/src/main/res/layout/fragment_view_pager_holder.xml
+++ b/app/src/main/res/layout/fragment_view_pager_holder.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewPagerHolder">
+    tools:context=".fragments.ViewPagerHolder">
 
 
     <androidx.viewpager2.widget.ViewPager2
