--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -116,10 +116,17 @@
         app:startDestination="@id/action_signIn_to_home_summary">
         <action
             android:id="@+id/action_signIn_to_viewPagerHolder"
-            app:destination="@id/viewPagerHolder" />
+            app:destination="@id/viewPagerHolder"
+            app:popEnterAnim="@anim/nav_default_enter_anim"
+            app:popUpTo="@id/signIn"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_signIn_to_home_summary"
-            app:destination="@id/home_summary" />
+            app:destination="@id/home_summary"
+            app:launchSingleTop="false"
+            app:popEnterAnim="@anim/nav_default_enter_anim"
+            app:popUpTo="@id/signIn"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/chooseStakeHolderDialog"
@@ -146,7 +153,7 @@
         tools:layout="@layout/fragment_all_micro_acounts" />
     <fragment
         android:id="@+id/viewPagerHolder"
-        android:name="be.kuleuven.elcontador10.ViewPagerHolder"
+        android:name="be.kuleuven.elcontador10.fragments.ViewPagerHolder"
         android:label="fragment_view_pager_holder"
         tools:layout="@layout/fragment_view_pager_holder" >
         <action
